# pbtb-rust

./: .dockerignore  .env  .env.sample  .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: architecture-reviewer.md  code-reviewer.md  comment-reviewer.md  security-checker.md
.claude/hooks/: rustfmt-on-edit.sh
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yaml
.devcontainer/infra/: bots.json
.devcontainer/scripts/: init-dynamodb.sh  post-create.sh  post-start.sh
.github/workflows/: lambda-deploy.yml  telebot-build.yml  telebot-deploy.yml
config/: default.toml
deploy/passivbot-image/: Dockerfile.ecs  README.md  buildspec.yml  entrypoint.sh
docs/: architecture.md  config-transfer.md  conventions.md  data-model.md  development.md
docs/deployment/: infra.md  lambda.md  overview.md  telebot.md
scripts/: build_passivbot_image.py  transfer_config_to_s3.py
src/: config.rs  domain.rs  infra.rs  lib.rs  main.rs  utils.rs
src/config/: configs.rs  dynamodb.rs  ecs.rs  s3.rs
src/domain/: bot.rs  botconfig.rs  clock.rs  configtemplate.rs  error.rs  exchange.rs  runtime.rs
src/infra/: apikeyrepository.rs  botconfigrepository.rs  botrepository.rs  client.rs  configtemplaterepository.rs
src/interface/: mod.rs
src/usecase/: add_bot.rs  apply_template.rs  bot_query.rs  delete_bot.rs  get_bot_config.rs  get_bot_runtime.rs  list_bots.rs  list_templates.rs  mod.rs  reconcile_stopped_task.rs  record_running_task.rs  run_task.rs  set_bot_enabled.rs  set_strategy_side.rs  start_bot.rs  stop_bot.rs  stop_task.rs  update_bot_config.rs  (+1 more)
tests/: botrepository_test.rs
(+83 files in other folders)
