[package]
name = "pbtb-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-dynamodb = "1"
aws-config = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
teloxide = { version = "0.12", features = ["macros"] }
anyhow = "1.0.99"
env_logger = "0.11.8"
aws-sdk-s3 = "1.108.0"

[dev-dependencies]
tokio-test = "0.4"
